Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Accessorial_Risk_Summary__c.field-meta.xml
<CustomField>
    <fullName>Accessorial_Risk_Summary__c</fullName>
    <label>Accessorial Risk Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>