Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Approval_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_At__c</fullName>
    <label>Approval Requested At</label>
    <type>DateTime</type>
</CustomField>