Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Lane Quotes Approved</relationshipLabel>
    <relationshipName>Lane_Quotes_Approved</relationshipName>
    <type>Lookup</type>
</CustomField>