Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Average_Lane_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Lane_Cost__c</fullName>
    <label>Average Lane Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>