Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Average_Similar_Margin__c.field-meta.xml
<CustomField>
    <fullName>Average_Similar_Margin__c</fullName>
    <label>Average Similar Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>