Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Average_Similar_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Similar_Rate__c</fullName>
    <label>Average Similar Rate</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>