Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Contract_Adjustment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Adjustment_Percent__c</fullName>
    <label>Contract Adjustment Percent</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>