Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Contract_Context__c.field-meta.xml
<CustomField>
    <fullName>Contract_Context__c</fullName>
    <label>Contract Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>