Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Converted_Load__c.field-meta.xml
<CustomField>
    <fullName>Converted_Load__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Load</label>
    <referenceTo>FreightTM__Load__c</referenceTo>
    <relationshipLabel>Converted Lane Quotes</relationshipLabel>
    <relationshipName>Converted_Lane_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>