Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Customer_Context_Summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_Context_Summary__c</fullName>
    <label>Customer Context Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>