Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <label>Customer Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
                <default>true</default>
                <label>No Response</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>