Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Customer_Response_At__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_At__c</fullName>
    <label>Customer Response At</label>
    <type>DateTime</type>
</CustomField>