Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Customer_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_Message__c</fullName>
    <label>Customer Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>