Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry Van</fullName>
            </value>
            <value>
                <fullName>Reefer</fullName>
            </value>
            <value>
                <fullName>Flatbed</fullName>
            </value>
            <value>
                <fullName>Step Deck</fullName>
            </value>
            <value>
                <fullName>Power Only</fullName>
            </value>
            <value>
                <fullName>Box Truck</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>