Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Estimated_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Gross_Profit__c</fullName>
    <label>Estimated Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>