Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Internal_Quote_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Quote_Notes__c</fullName>
    <label>Internal Quote Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>