Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Lane_Outlier_Warning__c.field-meta.xml
<CustomField>
    <fullName>Lane_Outlier_Warning__c</fullName>
    <label>Lane Outlier Warning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>