Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Last_Calculated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated_At__c</fullName>
    <label>Last Calculated At</label>
    <type>DateTime</type>
</CustomField>