Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Last_Lane_Cost__c.field-meta.xml
<CustomField>
    <fullName>Last_Lane_Cost__c</fullName>
    <label>Last Lane Cost</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>