Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Last_Lane_Rate__c.field-meta.xml
<CustomField>
    <fullName>Last_Lane_Rate__c</fullName>
    <label>Last Lane Rate</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>