Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Margin_Status__c.field-meta.xml
<CustomField>
    <fullName>Margin_Status__c</fullName>
    <label>Margin Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Calculated</fullName>
                <default>true</default>
                <label>Not Calculated</label>
            </value>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Low Margin</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
            <value>
                <fullName>Negative Margin</fullName>
            </value>
            <value>
                <fullName>Missing Rate</fullName>
            </value>
            <value>
                <fullName>Missing Cost</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>