Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <label>Override Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>