Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Pallet_Count__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Count__c</fullName>
    <label>Pallet Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>