Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Pricing_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Confidence__c</fullName>
    <label>Pricing Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>