Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Pricing_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Explanation__c</fullName>
    <label>Pricing Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>