Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Pricing_Log__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Log__c</fullName>
    <label>Pricing Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>