Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Pricing_Source__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Source__c</fullName>
    <label>Pricing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Data</fullName>
                <default>true</default>
                <label>Missing Data</label>
            </value>
            <value>
                <fullName>Tariff Table</fullName>
            </value>
            <value>
                <fullName>Tariff Table + Contract / Customer Terms</fullName>
            </value>
            <value>
                <fullName>Exact Lane History</fullName>
            </value>
            <value>
                <fullName>Exact Lane History + Contract / Customer Terms</fullName>
            </value>
            <value>
                <fullName>Similar Shipment History</fullName>
            </value>
            <value>
                <fullName>Similar Shipment History + Contract / Customer Terms</fullName>
            </value>
            <value>
                <fullName>Carrier Cost + Target Margin</fullName>
            </value>
            <value>
                <fullName>Carrier Cost + Target Margin + Contract / Customer Terms</fullName>
            </value>
            <value>
                <fullName>Quote Pay Cost + Target Margin</fullName>
            </value>
            <value>
                <fullName>Quote Pay Cost + Target Margin + Contract / Customer Terms</fullName>
            </value>
            <value>
                <fullName>Fallback Rule</fullName>
            </value>
            <value>
                <fullName>Fallback Rule + Contract / Customer Terms</fullName>
            </value>
            <value>
                <fullName>Manual Override</fullName>
            </value>
            <value>
                <fullName>Fallback Tariff Estimate</fullName>
                <isActive>false</isActive>
                <label>Fallback Tariff Estimate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>