Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Prior_Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Prior_Quote_Count__c</fullName>
    <label>Prior Quote Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>