Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Quote_History_Summary__c.field-meta.xml
<CustomField>
    <fullName>Quote_History_Summary__c</fullName>
    <label>Quote History Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>