Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Quote_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Quote_Win_Rate__c</fullName>
    <label>Quote Win Rate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>