Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Quote_Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Workflow_Status__c</fullName>
    <label>Quote Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Converted to Load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>