Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Service_Issue_Summary__c.field-meta.xml
<CustomField>
    <fullName>Service_Issue_Summary__c</fullName>
    <label>Service Issue Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>