Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Temperature Controlled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>