Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Shipment_Context_Summary__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Context_Summary__c</fullName>
    <label>Shipment Context Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>