Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Similar_Shipment_Count__c.field-meta.xml
<CustomField>
    <fullName>Similar_Shipment_Count__c</fullName>
    <label>Similar Shipment Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>