Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Suggested_Rate__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Rate__c</fullName>
    <label>Suggested Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>