Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Target_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Target_Margin_Percent__c</fullName>
    <label>Target Margin Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>