Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Tariff_Match_Detail__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Match_Detail__c</fullName>
    <label>Tariff Match Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>