Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Tariff_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Rate__c</fullName>
    <label>Tariff Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>