Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Tariff_Source__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Source__c</fullName>
    <label>Tariff Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>