Features/QuoteSystem/force-app/main/default/objects/FreightTM__Lane_Quote__c/fields/Win_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reason__c</fullName>
    <label>Win/Loss Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>